# aneya-frontend

./: .dockerignore  .env.example  .env.vercel  .env.vercel.new  .gitignore  .mcp.json  .vercelignore  ACCUMULATIVE_TRANSCRIPTION.md  ADVANCED_FORM_FIELDS.md  CHANGES.md  CLAUDE.md  CLOUDRUN_DEPLOYMENT.md  CODE_CHANGES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCTOR_FORM_QUICK_REFERENCE.md  DOCTOR_PRE_CONSULTATION_FORM_IMPLEMENTATION.md  DYNAMIC_FORMS.md  Dockerfile  Dockerfile.test  EXTERNAL_DATA_SOURCES.md  FIGMA_DESIGN_PROMPT.md  FILES_MODIFIED.md  FILE_MANIFEST.md  FRONTEND_README.md  HISTORICAL_FORMS_INTEGRATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_REPORT_2025-11-29.md  INTEGRATION_COMPLETE.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  OBGYN_IMPLEMENTATION_COMPLETE.md  OBGYN_INTEGRATION_SUMMARY.md  PARAKEET_DEPLOYMENT.md  PATIENT_HEALTH_RECORDS.md  PRODUCTION_BUILD_FIX.md  PROGRESSIVE_WIZARD_DOCS.md  PROGRESSIVE_WIZARD_OVERVIEW.md  PROGRESSIVE_WIZARD_QUICKSTART.md  PROXY_SETUP.md  (+51 more)
.github/workflows/: contract-tests.yml  test.yml
api/: README.md  clinical_decision_support_client.py  index.py
apps/web/: package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
backend/: api.py  app.py  servers  test_api_local.py  test_cloudrun_proxy.py
backend/api/: README.md  bnf_server.py  geolocation_server.py  index.py  (+1 more)
docs/: FINAL_REPORT_DESIGN_SPEC.md
frontend/: .env.production.local  .env.production.vercel  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
playwright-report/: index.html
scripts/: verify-deployment.sh
servers/: CLAUDE.md  HEIDI_README.md  NICE_GUIDELINES_README.md  SUMMARY.md  bnf_cache.py  bnf_server.py  clinical_decision_support_client.py  demo_clinical_decision_support.py  fogsi_server.py  heidi_server.py  nhmrc_guidelines_server.py  nice_guidelines_server.py  patient_info_server.py  test_all_servers.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
test-data/: community-pneumonia-mock.ts  community-pneumonia_20251215_164003.json  community-pneumonia_latest.json  run_test_consultation.py
(+303 files in other folders)
