[project]
name = "heidi"
version = "0.1.0"
description = "Clinical Decision Support System with multi-server MCP architecture"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.43.1",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "faster-whisper>=1.2.1",
    "fastmcp>=2.13.0.2",
    "firebase-admin>=7.1.0",
    "httpx>=0.27.0",
    "lxml>=6.0.2",
    "mcp>=1.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "streamlit>=1.30.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]
